--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,5 +7,8 @@
         "default_popup": "popup.html"
     },
     "host_permissions": ["*://*/"],
-    "options_page": "options.html"
+    "options_page": "options.html",
+    "content_security_policy": {
+        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+    }
 }
